update 100 and set header to column to prevent clipping

--- a/0x09-implement_a_design_from_scratch/4-styles.css
+++ b/0x09-implement_a_design_from_scratch/4-styles.css
@@ -100,6 +100,12 @@ header {
 
 
 /* MEDIA SCREEN HEADER */
+@media only screen and (max-width: 650px) {
+  .dynamic-nav {
+    flex-direction: column;
+  }
+}
+
 @media only screen and (max-width: 480px) {
 
   header {
